# yt-cli-player

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  PLAN.md  README.md  pyproject.toml  setup.sh
.github/workflows/: pylint.yml
yt_cli_player/: cli.py  config.py
yt_cli_player/api/: models.py  youtube.py
yt_cli_player/auth/: oauth.py  token_store.py
yt_cli_player/player/: ipc.py  mpv_player.py
yt_cli_player/ui/: browser.py  now_playing.py  thumbnail.py  visualizer.py
